# firefly-synth-2

./: .gitmodules  CMakeLists.txt  Manual.html  Manual.md  README.md  changelog.txt  comment_from_andreya_just_so_i_dont_lose_it.txt  known_issues.txt  linuxdrama.ff2preset  todo.txt  tuning_doubts.txt  zork.ff2preset
.github/workflows/: build.yaml
demo/: 3osc_uni_and_global_uni.xrns  ECHODEMO.rpp  TEMP.rpp  TEMP2.rpp  TEMP2_MODDLYTAP.rpp  TEMP3.rpp  TEMPMIDISTUFFDEMOSTUFF.rpp  TEMPMIDISTUFFDEMOSTUFF2.rpp  TEMPTEST.rpp  TEMP_KICK.rpp  demo_basic_kick.rpp  demo_bowstring.rpp  demo_compress_duck_osc_2by1.rpp  demo_compress_duck_voice_by_sidechain.rpp  demo_compress_global_duck_sidechain_by_voice.rpp  demo_compressor_global_simple.rpp  demo_compressor_voice_duck_osc2_by_osc1.rpp  demo_distortion.rpp  demo_echo_fm_and_echo_mod.rpp  demo_echo_pluckstring.rpp  demo_echo_pluckstring_and_voice_echo_mod.rpp  demo_echo_saw_and_echo_mod.rpp  demo_filter_keytrack_global.rpp  demo_filter_keytrack_voice.rpp  demo_filter_pitchfollow_global.rpp  demo_filter_pitchfollow_voice.rpp  demo_filter_tuning.rpp  demo_fm_distortion_1.rpp  demo_fm_distortion_2.rpp  demo_fm_lfo_filter.rpp  demo_full_01_progressive.xrns  demo_full_02.xrns  demo_global_uni_after_shaper.rpp  demo_global_uni_env_stretch.rpp  demo_global_uni_lfo_echo.rpp  demo_global_unison.rpp  demo_global_unison_2.rpp  demo_global_unison_3.rpp  demo_i_dont_know_how_i_got_here.rpp  demo_keytrack_by_matrix_global.rpp  (+36 more)
host_test/: FXBase.ff2preset  FXOverlay.ff2preset  ReaperCLAP.rpp  ReaperCLAPFX.rpp  ReaperCLAPMIDITest.rpp  ReaperCLAPSidechain.rpp  ReaperVST3.rpp  ReaperVST3FX.rpp  ReaperVST3MIDITest.rpp  ReaperVST3Sidechain.rpp  RenoiseModMatrix.xrns  RenoiseVST3.xrns  RenoiseVST3FX.xrns  RenoiseVST3FXSidechain.xrns  SideChainBase.ff2preset  SideChainOverlay.ff2preset  nicefx.rpp
host_test/ArdourLinuxVST3FX/: ArdourLinuxVST3FX.ardour  ArdourLinuxVST3FX.history  instant.xml
host_test/ArdourVST3FX/: ArdourVST3FX.ardour  instant.xml
host_test/ArdourWinAndMacVST3FX/: ArdourWinAndMacVST3FX.history  instant.xml
host_test/ArdourWindowsVST3FX/: ArdourWindowsVST3FX.ardour  instant.xml
host_test/BitwigCLAP/: BitwigCLAP.bwproject
host_test/BitwigCLAPFX/: BitwigCLAPFX.bwproject
host_test/BitwigCLAPFXSidechain/: BitwigCLAPFXSidechain.bwproject
host_test/BitwigCLAPGlobalModulation/: BitwigCLAPGlobalModulation.bwproject
host_test/BitwigCLAPGlobalUniPerVoiceModDifferentVoiceLifetime/: BitwigCLAPGlobalUniPerVoiceModDifferentVoiceLifetime.bwproject
host_test/BitwigCLAPPerVoiceModulation/: BitwigCLAPPerVoiceModulation.bwproject
host_test/BitwigCLAPPolyModAndMatrix/: BitwigCLAPPolyModAndMatrix.bwproject
host_test/BitwigCLAPSidechain/: BitwigCLAPSidechain.bwproject
host_test/BitwigCLAPVoiceStartModulation/: BitwigCLAPVoiceStartModulation.bwproject
host_test/BitwigVST3/: BitwigVST3.bwproject
host_test/BitwigVST3FX/: BitwigVST3FX.bwproject
host_test/BitwigVST3FXSidechain/: BitwigVST3FXSidechain.bwproject
host_test/BitwigVST3Sidechain/: BitwigVST3Sidechain.bwproject
host_test/FLStudioCLAP/: FLStudioCLAP.flp
host_test/FLStudioCLAPFX/: FLStudioCLAPFX.flp
host_test/FLStudioCLAPFXSidechain/: FLStudioCLAPFXSidechain.flp
host_test/FLStudioVST3/: FLStudioVST3.flp
host_test/FLStudioVST3FX/: FLStudioVST3FX.flp
host_test/FLStudioVST3FXSidechain/: FLStudioVST3FXSidechain.flp
host_test/FLStudioVST3ModMatrix/: FLStudioVST3ModMatrix.flp
macos/: Info.plist
macos/fx/: Info.plist
patch_gateway/: nicepatch01.ff2preset
resources/: README.txt
resources/manual/: Manual.html  Manual.md
resources/ui/themes/: default.json  default2.json  temp.json
scripts/: build_linux.sh  build_mac.sh  build_windows.bat
src/: main.cpp
src/firefly_base_clap/firefly_base_clap/: FBCLAPAudioPorts.cpp  FBCLAPExchangeStateQueue.hpp  FBCLAPGUI.cpp  FBCLAPHostGUIContext.cpp  FBCLAPLatency.cpp  FBCLAPNotePorts.cpp  FBCLAPParams.cpp  FBCLAPPlugin.cpp  FBCLAPPlugin.hpp  FBCLAPPosixFDSupport.cpp  FBCLAPState.cpp  FBCLAPSyncEvent.cpp  FBCLAPSyncEvent.hpp  FBCLAPUtility.cpp  FBCLAPUtility.hpp
src/firefly_base_juce/firefly_base_juce/: firefly_base_juce.cpp
src/firefly_base_vst3/firefly_base_vst3/: FBVST3AudioEffect.cpp  FBVST3AudioEffect.hpp  FBVST3EditController.cpp  FBVST3EditController.hpp  FBVST3GUIEditor.cpp  FBVST3GUIEditor.hpp  FBVST3Parameter.cpp  FBVST3Parameter.hpp  FBVST3Utility.cpp  FBVST3Utility.hpp
src/firefly_synth_clap/firefly_synth_clap/: FFCLAPPluginEntry.cpp
src/firefly_synth_vst3/firefly_synth_vst3/: FFVST3PluginFactory.cpp
src/foo/: foo.cpp
src/playground-plug/: main.h  plug.cpp  plug.hpp
src/playground-plug-vst3/: plug.cpp  plug.hpp
src/playground-plug-vst3/playground-plug-vst3/: plug.cpp  plug.hpp
src/playground-plug/playground-plug/: plug.cpp  plug.hpp
src/playground-plug/shared/: toolchain.hpp
src/playground_base_clap/playground_base_clap/: FBCLAPAudioPorts.cpp  FBCLAPExchangeStateQueue.hpp  FBCLAPGUI.cpp  FBCLAPHostGUIContext.cpp  FBCLAPLatency.cpp  FBCLAPNotePorts.cpp  FBCLAPParams.cpp  FBCLAPParams.cpp2  FBCLAPPlugin.cpp  FBCLAPPlugin.hpp  FBCLAPPosixFDSupport.cpp  FBCLAPState.cpp  FBCLAPSyncEvent.cpp  FBCLAPSyncEvent.hpp  FBCLAPThreadPool.cpp  FBCLAPUtility.cpp  FBCLAPUtility.hpp  FBClapParams.cpp  playground_base_clap.cpp
src/playground_base_vst3/playground_base_vst3/: FBVST3AudioEffect.cpp  FBVST3AudioEffect.hpp  FBVST3EditController.cpp  FBVST3EditController.hpp  FBVST3GUIEditor.cpp  FBVST3GUIEditor.hpp  FBVST3Parameter.cpp  FBVST3Parameter.hpp  FBVST3PluginController.cpp  FBVST3PluginController.hpp  FBVST3PluginFactory.cpp  FBVST3PluginProcessor.cpp  FBVST3PluginProcessor.hpp  FBVST3Utility.cpp  FBVST3Utility.hpp
static/: Features.md  Manual.md  compare_to_ff1.md  demo_manual.rpp  demo_open_audio_stack.xrns  demo_patch_from_scratch_final.ff2preset  demo_patch_from_scratch_final.rpp  demo_patch_from_scratch_start.ff2preset  demo_patch_from_scratch_start.rpp  more_tuning_questions.txt  plug_routing_diagram.dot  routing_diagram.dot  temp_osciprocessor_tuningstuff.cpp.txt
website/: index.html
(+1300 files in other folders)
